# ScrollZoom

./: .gitignore  CMakeLists.txt  ReadMe.md  ScrollZoom.ini  vcpkg.json
cmake/: sourcelist.cmake
src/: InputHandler.cpp  InputHandler.h  PCH.h  Settings.cpp  Settings.h  TullFrameworkCompat.cpp  TullFrameworkCompat.h  ZoomController.cpp  ZoomController.h  main.cpp
